# docs/swagger.json
@@ -6,10 +6,10 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "http://localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/medicinedetails": {
+        "/medicine-details": {
             "get": {
                 "description": "Retrieve all medicine detail records",
                 "consumes": [
@@ -55,7 +55,7 @@
                 "tags": [
                     "medicine-detail"
                 ],
-                "summary": "Create medicinedetail",
+                "summary": "Create medicine detail",
                 "operationId": "create-medicine-detail",
                 "parameters": [
                     {
@@ -90,7 +90,7 @@
                 }
             }
         },
-        "/medicinedetails/{id}": {
+        "/medicine-details/{id}": {
             "get": {
                 "description": "Retrieve a single medicine detail by ID",
                 "consumes": [
@@ -1046,6 +1046,53 @@
                 }
             }
         },
+        "/transactions/midtrans-callbacks": {
+            "post": {
+                "description": "Receives and processes callback notifications from Midtrans",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transaction"
+                ],
+                "summary": "Handle Midtrans callback notification",
+                "operationId": "handle-midtrans-callback",
+                "parameters": [
+                    {
+                        "description": "Midtrans Notification Payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessString"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/transactions/patients/{patient_id}": {
             "get": {
                 "description": "Retrieve all transactions for a specific patient",
@@ -1359,6 +1406,18 @@
                 "patient_id": {
                     "type": "string",
                     "example": "123e4567-e89b-12d3-a456-426614174000"
+                },
+                "payment_redirect_url": {
+                    "type": "string",
+                    "example": "https://example.com/redirect"
+                },
+                "payment_token": {
+                    "type": "string",
+                    "example": "https://example.com/token"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "pending"
                 },
                 "total_medicines": {
                     "type": "integer",
