# internal/controller/http/v1/controller.go
@@ -4,16 +4,18 @@ import (
 	"github.com/go-playground/validator/v10"
 	"go-eprescription-clean/internal/usecase"
 	"go-eprescription-clean/pkg/logger"
+	"go-eprescription-clean/pkg/midtrans"
 )
 
 // V1 -.
 type Usecases struct {
-	Signa       usecase.Signa
-	Patient     usecase.Patient
-	Medicine    usecase.Medicine
-	Transaction usecase.Transaction
+	Signa          usecase.Signa
+	Patient        usecase.Patient
+	Medicine       usecase.Medicine
+	Transaction    usecase.Transaction
 	MedicineDetail usecase.MedicineDetail
-	// ... 
+	Midtrans       *midtrans.SnapClient 
+	// ...
 }
 
 type V1 struct {
