# internal/entity/transaction.go
@@ -4,10 +4,13 @@ package entity
 
 // Transaction-.
 type Transaction struct {
-	ID             string           `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`
-	MedicineType   string           `json:"medicine_type" example:"compound"`
-	TotalPrice     int64            `json:"total_price" example:"15000"`
-	TotalMedicines int64            `json:"total_medicines" example:"3"`
-	PatientID      string           `json:"patient_id" example:"123e4567-e89b-12d3-a456-426614174000"`
-	MedicineDetail []MedicineDetail `json:"medicine_detail,omitempty" `
+	ID                 string           `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`
+	PatientID          string           `json:"patient_id" example:"123e4567-e89b-12d3-a456-426614174000"`
+	MedicineType       string           `json:"medicine_type" example:"compound"`
+	TotalPrice         int64            `json:"total_price" example:"15000"`
+	TotalMedicines     int64            `json:"total_medicines" example:"3"`
+	Status             string           `json:"status" example:"pending"`
+	MedicineDetail     []MedicineDetail `json:"medicine_detail,omitempty"`
+	PaymentRedirectURL string           `json:"payment_redirect_url,omitempty" example:"https://example.com/redirect"`
+	PaymentToken       string           `json:"payment_token,omitempty" example:"https://example.com/token"`
 }
